cabal-version:       2.2

name:                fused-effects-random
version:             0.0.0.0
synopsis:            Random number generation for fused-effects.
description:         Random number generation as an effect using fused-effects.
homepage:            https://github.com/fused-effects/fused-effects-random
bug-reports:         https://github.com/fused-effects/fused-effects-random/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          robrix@github.com
copyright:           2019 Rob Rix
category:            Control
build-type:          Simple
extra-source-files:
  CHANGELOG.md

library
  build-depends:       base >=4.12 && <4.13
                     , fused-effects ^>= 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
